--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Organiza el sorteo de amigo secreto (o amigo invisible) de forma fácil, rápida y gratuita. Añade participantes, define restricciones y envía los resultados por correo electrónico al instante."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Amigo Secreto Online | Organiza tu Sorteo Fácil y Gratis</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
